update docs for v0.12

--- a/blog/src/content/docs/guides/email-sending.mdx
+++ b/blog/src/content/docs/guides/email-sending.mdx
@@ -25,7 +25,7 @@ app SaaSTemplate {
 This means that you can send emails from your app using the `send` function from the `email` module:
 
 ```tsx title="src/server/webhooks.ts"
-import { emailSender } from "@wasp/email/index.js";
+import { emailSender } from "wasp/server/email";
 
 //...
 
