update docs & rename hook

--- a/opensaas-sh/blog/src/content/docs/guides/email-sending.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/email-sending.mdx
@@ -2,8 +2,7 @@
 title: Email Sending
 banner:
   content: |
-    ⚠️ Open SaaS is now running on <a href='https://wasp-lang.dev'>Wasp v0.13</a>! If you're running an older version of Open SaaS, please follow the 
-    <a href="https://wasp-lang.dev/docs/migrate-from-0-12-to-0-13">migration instructions here</a> ⚠️ 
+    Open SaaS is now running on <a href='https://wasp-lang.dev'>Wasp v0.14</a>! <br/>🐝🚀<br/>If you're running an older version, please follow the <a href="https://wasp-lang.dev/docs/migrate-from-0-13-to-0-14">migration instructions.</a>
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
