add Hidden LLM helper

--- a/opensaas-sh/blog/src/content/docs/index.mdx
+++ b/opensaas-sh/blog/src/content/docs/index.mdx
@@ -4,10 +4,12 @@ banner:
   content: |
     🆕 Open SaaS is now running on <b><a href='https://wasp-lang.dev'>Wasp v0.15</a></b>! <br/>⚙️<br/>If you're running an older version and would like to upgrade, please follow the <a href="https://wasp-lang.dev/docs/migration-guides/migrate-from-0-14-to-0-15">migration instructions.</a>
 ---
+import HiddenLLMHelper from '../../components/HiddenLLMHelper.astro';
 
 ## Welcome to your new SaaS App!
 
-<!-- {/* TODO: add a screenshot of the app */} -->
+{/* TODO: add a screenshot of the app */}
+<HiddenLLMHelper />
 
 You've decided to build a SaaS app with this template. Great choice! 🎉
 
