fix og:images on blog

--- a/opensaas-sh/blog/src/content/docs/blog/2024-11-22-best-annoying-cookie-consent-banners.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-11-22-best-annoying-cookie-consent-banners.mdx
@@ -2,7 +2,9 @@
 title: We Made the Most Annoying Cookie Banners Ever
 date: 2024-11-26
 tags: ["cookie consent", "saas", "sideproject", "hackathon"] 
-image: "/cookie-consent/annoying-cookie-banners.jpg"
+cover:
+  alt: the Most Annoying Cookie Banners
+  image: "/cookie-consent/annoying-cookie-banners.jpg"
 ---
 import VideoPlayer from '../../../components/VideoPlayer.astro';
 
