update astro starlight & blog plugin

--- a/opensaas-sh/blog/src/content/docs/blog/2024-11-22-best-annoying-cookie-consent-banners.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-11-22-best-annoying-cookie-consent-banners.mdx
@@ -1,10 +1,14 @@
 ---
 title: We Made the Most Annoying Cookie Banners Ever
 date: 2024-11-26
-tags: ["cookie consent", "saas", "sideproject", "hackathon"] 
+tags:
+  - cookie consent
+  - saas
+  - sideproject
+  - hackathon
 cover:
-  alt: the Most Annoying Cookie Banners
-  image: "/cookie-consent/annoying-cookie-banners.jpg"
+  image: ../../../../public/og-images/2024-11-22-best-annoying-cookie-consent-banners.webp
+  alt: Annoying Cookie Banner Contest
 ---
 import VideoPlayer from '../../../components/VideoPlayer.astro';
 
