improve banner image assignments & docs perf

--- a/opensaas-sh/blog/src/content/docs/blog/2024-10-10-most-annoying-cookie-banner-contest.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-10-10-most-annoying-cookie-banner-contest.mdx
@@ -6,7 +6,14 @@ tags:
   - saas
   - sideproject
   - hackathon
+hideBannerImage: true
 ---
+import { Image } from 'astro:assets';
+import wheel from '@assets/cookie-consent/wheel.gif';
+import enter from '@assets/cookie-consent/enter.gif';
+import keyboard from '@assets/cookie-consent/keyboard.jpg';
+import share from '@assets/cookie-consent/image.png';
+
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe 
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
@@ -27,11 +34,11 @@ Cookie consent banners annoy us all. So we thought, why not have some fun with t
 
 1. *The Cookie Consent Wheel of Fortune:*
 
-![Consent wheel](/cookie-consent/wheel.gif)
+<Image src={wheel} alt='Consent wheel' loading='lazy' />
 
 2. *The “Hit Enter When the Red Ball is Over the Accept Button to Consent” Banner:* 
     
-![Enter to win](/cookie-consent/enter.gif)
+<Image src={enter} alt='Enter to win' loading='lazy' />
     
 
 Now it’s time for you to get creative. Btw, if you’re looking for some inspiration, check out these [Ridiculous Volume Slider UI’s](https://uxdesign.cc/the-worst-volume-control-ui-in-the-world-60713dc86950).
@@ -47,7 +54,7 @@ The 2 winners will be selected by:
 
 The community will get a chance to vote in a battle royale style elimination tournament, where two banners will go head-to-head and the winner will advance to the next round.
 
-![Keyboard](/cookie-consent/keyboard.jpg)
+<Image src={keyboard} alt='Keyboard' loading='lazy' />
 
 (The brand/style will depend on the winner's location, but we'll do our best to find one with a Wasp look and feel 😃)
 
@@ -57,7 +64,7 @@ The community will get a chance to vote in a battle royale style elimination tou
     - If you prefer to work in your own editor, just click on the `Create a repository` button after you fork the template
 - When finished with your banner, click on `Share` in the top left, and in the `Embed` tab, click `Copy URL` with the following settings:
     
-![image.png](/cookie-consent/image.png)
+  <Image src={share} alt='Share' loading='lazy' />
     
 - Next, [edit the `MOST-ANNOYING-COOKIE-BANNER.md` file](https://github.com/wasp-lang/open-saas/edit/main/MOST-ANNOYING-COOKIE-BANNER.md) on the Open SaaS repo.
     - Enter your GitHub username followed by the embed link you copied from Stackblitz 
