--- a/template/blog/src/content/docs/blog/2023-11-23-post.md
+++ b/template/blog/src/content/docs/blog/2023-11-23-post.md
@@ -1,11 +1,8 @@
 ---
 title: My first blog post
 date: 2023-11-20
-authors:
-  - name: Craig Man
-    title: Rock n Roller
-    picture: /CRAIG_ROCK.png
 tags: ["blog", "post", "saas", "rocknroll"]
+authors: ["Dev"]
 ---
 
 ## Hello
